# gigachat

./: .gitignore  .mailmap  Cargo.toml  DEVELOPMENT.md  README.md  SESSION_SUMMARY.md
src/: agent.rs  config.rs  gui.rs  logger.rs  main.rs  talk_cloud.rs
src/ai/: gigachat.rs  local.rs  mod.rs  openai.rs
src/core/: agent.rs  mod.rs  tts.rs
src/services/: currency.rs  mod.rs  storage.rs  weather.rs
src/ui/: app.rs  buttons.rs  chat.rs  chat_bubble.rs  components.rs  mod.rs  widgets.rs
