[package]
name = "clippy"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32"
egui = "0.32"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
image = "0.25"
base64 = "0.22"
objc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
